--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "ag-grid-react": "^35.0.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "formik": "^2.4.9",
     "lucide-react": "^0.554.0",
+    "moment": "^2.30.1",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
