--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "formik": "^2.4.9",
     "lucide-react": "^0.554.0",
     "moment": "^2.30.1",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "19.2.0",
