--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
